--- a/todomvc-ember-cli/app/templates/todos.hbs
+++ b/todomvc-ember-cli/app/templates/todos.hbs
@@ -10,13 +10,16 @@
     }}
   </header>
 
-  <section id="main">
+ <section id="main">
     <ul id="todo-list">
       {{#each todo in model itemController="todo"}}
-      <li {{bind-attr class="todo.isCompleted:completed"}}>
-        <input type="checkbox" class="toggle">
-        {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
-        <label>{{todo.title}}</label><button class="destroy"></button>
+      <li {{bind-attr class="todo.isCompleted:completed todo.isEditing:editing"}}>
+        {{#if todo.isEditing}}
+          <input class="edit">
+        {{else}}
+          {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
+          <label {{action "editTodo" on="doubleClick"}}>{{todo.title}}</label><button class="destroy"></button>
+        {{/if}}
       </li>
       {{/each}}
     </ul>
